# gwenland-ade

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  update_providers.py
.github/workflows/: changelog.yml  ci.yml  release.yml
ade-engine/: Cargo.toml  tauri.conf.json
ade-engine/capabilities/: default.json
ade-engine/src/: commands.rs  lib.rs  main.rs  memory.rs  providers.rs  tools.rs  window.rs
ade-ui/: index.html  package.json  pnpm-lock.yaml  tsconfig.json
ade-ui/src/: App.svelte  Composer.svelte  Feedback.svelte  ModelPicker.svelte  OnboardingOverlay.svelte  Output.svelte  PreviewPane.svelte  PreviewWindow.svelte  ProviderIcon.svelte  Settings.svelte  SettingsApiKeys.svelte  SettingsMemory.svelte  Sidebar.svelte  SplitPane.svelte  StatusBar.svelte  Titlebar.svelte  app.css  conversation.svelte.ts  main.ts  providers.ts  ui.svelte.ts
ade-ui/src/components/: ModelPicker.svelte  OnboardingOverlay.svelte  PreviewPane.svelte  PreviewWindow.svelte  ProviderIcon.svelte  Sidebar.svelte  SplitPane.svelte  StatusBar.svelte  Titlebar.svelte
ade-ui/src/features/chat/: AskPrompt.svelte  ChatView.svelte  Composer.svelte  ConversationView.svelte  Output.svelte  ToolCall.svelte  artifact.svelte.ts  conversation.svelte.ts
ade-ui/src/features/renderers/: Katex.svelte  Markdown.svelte  MarkdownInline.svelte  Mermaid.svelte  katex.ts  markdown.ts  mermaid.ts
ade-ui/src/features/settings/: Settings.svelte  SettingsApiKeys.svelte
ade-ui/src/shared/: onboarding.svelte.ts  providers.ts  tools.ts
changelog/: README.md  added-feedback-ui.md  added-memory-injection.md  added-model-picker-icons.md  added-provider-registry.md
