[package]
name = "gwenland-ade"
version = "0.1.4"
description = "GwenLand ADE — agentic-first desktop app"
authors = ["GwenLand"]
edition = "2021"

[lib]
name = "gwenland_ade_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", default-features = false, features = ["time", "sync", "rt"] }
# OS keychain for API keys (Windows Credential Manager / macOS Keychain / libsecret).
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
# Memory export/import (GWEN-492). Default features drop optional compression
# backends to keep the binary small; the deflate default is sufficient for
# small markdown files.
zip = { version = "2", default-features = false, features = ["deflate"] }
